--- a/style.css
+++ b/style.css
@@ -8,15 +8,31 @@
   box-sizing: border-box;
 }
 
+html {
+  font-size: 93.75%;
+}
 body {
   background: #f0f2f5;
   font-family: "Poppins";
+}
+
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border-width: 0;
 }
 
 .container {
   width: min(90vw, 800px);
   margin: auto;
 }
+
 /*TITLES STYLE ------------------- */
 h2 {
   margin-top: 3.2rem;
@@ -25,6 +41,35 @@ h2 {
   font-weight: normal;
 }
 
+/* LINKS & BUTTONS STYLE ------------------ */
+a {
+  color: #49aa26;
+  text-decoration: none;
+}
+
+a:hover {
+  color: #3dd705;
+}
+
+button {
+  width: 100%;
+  height: 50px;
+  border: none;
+  color: white;
+  background-color: #49aa26;
+  padding: 0;
+  border-radius: 0.25;
+  cursor: pointer;
+}
+
+button:hover {
+  background: #3dd705;
+}
+
+.button.new {
+  margin-bottom: 0.8rem;
+  display: inline-block;
+}
 /*HEADER STYLE ------------------- */
 header {
   background: #2d4a22;
@@ -59,6 +104,9 @@ header {
 .card h3 {
   font-weight: normal;
   font-size: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .card p {
@@ -73,6 +121,12 @@ header {
 }
 
 /*TABLE STYLE ------------------- */
+#transaction {
+  display: block;
+  overflow-x: auto;
+  width: 100%;
+}
+
 #data-table {
   width: 100%;
   border-spacing: 0 0.5rem;
@@ -82,6 +136,11 @@ header {
 table thead tr th:first-child,
 table tbody tr td:first-child {
   border-radius: 0.25rem 0 0 0.25rem;
+}
+
+table thead tr th:last-child,
+table tbody tr td:last-child {
+  border-radius: 0 0.25rem 0.25rem 0;
 }
 
 table th {
@@ -117,10 +176,81 @@ td.expense {
   color: #e92929;
 }
 
+/*MODAL STYLE----------------------*/
+.modal-overlay {
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.7);
+  position: fixed;
+  top: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  opacity: 0;
+  visibility: hidden;
+}
+
+.modal-overlay.active {
+  opacity: 1;
+  visibility: visible;
+}
+
+.modal {
+  background: #f0f2f5;
+  padding: 2.4rem;
+}
+
+/* FORM STYLE ------------------*/
+#form {
+  max-width: 500px;
+}
+
+#form h2 {
+  margin-top: 0;
+}
+
+input {
+  border: none;
+  border-radius: 0.3em;
+  padding: 0.8rem;
+}
+
+.input-group {
+  margin-top: 0.8rem;
+}
+
+.input-group small {
+  opacity: 0.4;
+}
+
+.input-group.actions {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.input-group.actions .button,
+.input-group.actions button {
+  width: 48%;
+}
+
 /*FOOTER STYLE ------------------- */
 footer {
   text-align: center;
   padding: 4rem 0 2rem;
   color: var(--dark-blue);
   opacity: 0.6;
+}
+
+/* RESPONSIVE STYLE ---------------*/
+@media (min-width: 800px) {
+  html {
+    font-size: 87.5%;
+  }
+
+  #balance {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 2rem;
+  }
 }
